--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-body:not(.attribution){
+body{
     background-color: hsl(233, 47%, 7%);
     display: flex;
     align-items: center;
@@ -53,15 +53,4 @@ body:not(.attribution){
     height: 320px;
     border-radius: 5px;
     filter:  sepia(10%) saturate(2000%) hue-rotate(236deg) grayscale(20%);;
-}
-.attribution{
-
-    margin-top: 100px;
-    text-align: center;
-    color: white;
-    font-family: 'Inter', sans-serif;
-}
-a{
-    color: hsl(277, 64%, 61%);
-    font-family: 'Inter', sans-serif;
 }
