--- a/style.css
+++ b/style.css
@@ -10,9 +10,10 @@ body{
     background-color: hsl(244, 38%, 16%);
     display: inline-block;
     vertical-align: middle;
-    padding-top: 23px;
-    border-radius: 5px;
-    padding-bottom: 20px;
+    padding-top: 31px;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+    padding-bottom: 32px;
 }
 .title{
     font-family: 'Inter', sans-serif;
@@ -50,8 +51,12 @@ body{
 }
 .image-wrapper {
     background: hsl(277, 64%, 61%);
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
 }
-.pic {
+.pic{
+    vertical-align: bottom;
+    height: 340px;
     mix-blend-mode: multiply;
     opacity: .75;
     object-fit: cover;
